tests/sksl/errors/ReservedNameHvec2.glsl
### Compilation failed:

error: 1: 'hvec2' is a reserved word
int hvec2;
    ^^^^^
1 error
